Make sure notification block is hidden on small screens.

--- a/public/style.css
+++ b/public/style.css
@@ -152,6 +152,7 @@
     position: absolute;
     bottom: -50px;
     transition: transform 0.3s ease-in-out;
+    display: none;
   }
 
   .notification-container p {
